public/theme.css
/**
 * Steam Art Manager is a tool for setting the artwork of your Steam library.
 * Copyright (C) 2023 Travis Lane (Tormak)
 * 
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program. If not, see <https://www.gnu.org/licenses/>
 */
:root {
	--highlight: #04e200;
	--highlight-hover: #05FF00;

	--highlight-dim: #039900;
	--highlight-dim-hover: #04aa02;

	--highlight-transparent: #04e2009d;

	--selection-color: #3891ff7a;

	--link-color: #00bbff;
	--link-color-visited: #005eff;

	--warning: #e24a4a;
	--warning-hover: #e13525;

	--success: #36ff04;

	--toastContainerTop: 2.5rem;
}

[data-theme="dark"] {
	--font-color: rgb(231, 231, 231);
	--shadow: #0e0e0e;

	--background-dark: #101010;
	--background-dark-hover: #1a1a1a;

	--background: #1d1d1d;
	--background-hover: #222222;

	--foreground: #2b2b2b;
	--foreground-hover: #363636;

	--foreground-light: #444444;
	--foreground-light-hover: #505050;
	
	--save: #18bb03;
	--save-hover: #28c900;

	--sgdb-animated-color: #e2a256;
  
  --tooltip-background: var(--background-dark);
  --tooltip-border: rgba(68, 68, 68, 0.4);
  --tooltip-border-arrow: rgba(75, 75, 75, 0.5);
  --tooltip-shadow: rgba(0, 8, 16, .08);
}

[data-theme="light"] {
	--font-color: rgb(14, 14, 14);
	--shadow: #868383;
	
	--background-dark: #f3f3f3;
	--background-dark-hover: #e4e4e4;

	/* --background: #dfdfdf;
	--background-hover: #dadada; */

  --background: #dfdfdf;
  --background-hover: #d1d1d1;

	/* --foreground: #bebebe;
	--foreground-hover: #aaaaaa; */

  --foreground: #cfcfcf;
  --foreground-hover: #c1c1c1;
	
	/* --foreground-light: #949494;
	--foreground-light-hover: #8a8a8a; */

  --foreground-light: #bfbfbf;
  --foreground-light-hover: #b1b1b1;
	
	
	--save: #4ee73a;
	--save-hover: #24fc08;

	--sgdb-animated-color: #f38c0d;
  
  --tooltip-background: var(--background-dark);
  --tooltip-border: rgba(0, 8, 16, .2);
  --tooltip-border-arrow: rgba(0, 8, 16, .3);
  --tooltip-shadow: rgba(0, 8, 16, .08);
}

